objects/Planejamento__c.object
<CustomObject>
    <fields>
        <fullName>Ano_de_Referencia__c</fullName>
        <label>Ano de Referência</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                    <default>true</default>
                    <label>2014</label>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aprovado_semana_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovado mensal (+semana 1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aprovado_semana_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovado semana 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aprovado_semana_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovado semana 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conta_Encerrado__c</fullName>
        <description>Conta quantas visitas estão com Status &quot;Encerrado&quot;</description>
        <label>Conta Encerrado</label>
        <summaryFilterItems>
            <field>Visitas__c.Status__c</field>
            <operation>equals</operation>
            <value>Encerrada</value>
        </summaryFilterItems>
        <summaryForeignKey>Visitas__c.Planejamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conta_Planejado__c</fullName>
        <description>Conta quantas visitas estão com Status &quot;Planejada&quot;</description>
        <label>Conta Planejado</label>
        <summaryFilterItems>
            <field>Visitas__c.Status__c</field>
            <operation>equals</operation>
            <value>Planejada</value>
        </summaryFilterItems>
        <summaryForeignKey>Visitas__c.Planejamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_is_KA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if customer is a Key Account. It will be used for sharing rule &quot;Compartilha cliente filho com KA&quot;in order to share the child accounts with key accounts. It&apos;s invisible for user interface.</description>
        <label>Customer is KA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_da_Visitas_em_Branco__c</fullName>
        <label>Data da Visita em Branco</label>
        <summaryFilterItems>
            <field>Visitas__c.Data_da_Visita__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Visitas__c.Visita_n_o_realizada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Visitas__c.Planejamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hora_da_Visita_em_Branco__c</fullName>
        <label>Hora da Visita em Branco</label>
        <summaryFilterItems>
            <field>Visitas__c.Hora_da_Visita__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Visitas__c.Visita_n_o_realizada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Visitas__c.Planejamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KAM10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planejamentos_de_Visitas9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KAM1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planejamentos_de_Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KAM2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planejamentos_de_Visitas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MonthYear__c</fullName>
        <formula>DATE(VALUE(TEXT(Ano_de_Referencia__c)),
CASE(M_s_de_Ref_rencia__c,
&apos;Janeiro&apos;, 1, &apos;Fevereiro&apos;, 2, &apos;Março&apos;, 3, &apos;Abril&apos;, 4, &apos;Maio&apos;, 5, &apos;Junho&apos;, 6, &apos;Julho&apos;, 7, &apos;Agosto&apos;, 8, &apos;Setembro&apos;, 9, &apos;Outubro&apos;, 10, &apos;Novembro&apos;, 11, &apos;Dezembro&apos;, 12, 1)
,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT_MonthYear</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Origin__c</fullName>
        <label>Creation Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_Month_Visits__c</fullName>
        <label>Visitas Mes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M_s_de_Ref_rencia__c</fullName>
        <label>Mês de Referência</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Janeiro</fullName>
                </value>
                <value>
                    <fullName>Fevereiro</fullName>
                </value>
                <value>
                    <fullName>Março</fullName>
                </value>
                <value>
                    <fullName>Abril</fullName>
                </value>
                <value>
                    <fullName>Maio</fullName>
                </value>
                <value>
                    <fullName>Junho</fullName>
                </value>
                <value>
                    <fullName>Julho</fullName>
                </value>
                <value>
                    <fullName>Agosto</fullName>
                </value>
                <value>
                    <fullName>Setembro</fullName>
                </value>
                <value>
                    <fullName>Outubro</fullName>
                </value>
                <value>
                    <fullName>Novembro</fullName>
                </value>
                <value>
                    <fullName>Dezembro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_Year_User__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to concatenate the value of Month - year - user.</description>
        <label>Month Year User</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>&apos;PVP-&apos; +  Owner:User.FirstName  + &apos; &apos; + Owner:User.LastName + &apos;-&apos; +  TEXT(M_s_de_Ref_rencia__c)  + &apos;-&apos; + TEXT (Ano_de_Referencia__c)</formula>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Status_Translate__c</fullName>
        <label>Planning Status Translate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preenchimento__c</fullName>
        <formula>IF($RecordType.DeveloperName = &apos;BRA_Standard&apos;, 
IF((Data_da_Visitas_em_Branco__c =0 &amp;&amp; Hora_da_Visita_em_Branco__c = 0), 
IMAGE(&quot;servlet/servlet.ImageServer?id=015D0000001wULm&amp;oid=00DL0000005tqQL&quot;, &quot;OK&quot;), 
IMAGE(&quot;servlet/servlet.ImageServer?id=015D0000001wUM7&amp;oid=00DL0000005tqQL&quot;, &quot;Visitas não agendadas&quot;)), 

IF(($RecordType.DeveloperName = &apos;PLV_Standard_AR&apos; || $RecordType.DeveloperName = &apos;PLV_Standard_UY&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_PLV_NewPlanning&apos; || $RecordType.DeveloperName = &apos;LAT_MX_PLV_Approved&apos;), 
IF(Data_da_Visitas_em_Branco__c =0, &quot;OK para enviar a aprobación&quot;, &quot;Faltan agendar visitas&quot;) , 
&quot;&quot;))</formula>
        <label>Preenchimento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitar_aprova_o_para__c</fullName>
        <label>Solicitar aprovação para</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planejamento mensal (+semana 1)</fullName>
                    <default>true</default>
                    <label>Planejamento mensal (+semana 1)</label>
                </value>
                <value>
                    <fullName>Planejamento semana 2</fullName>
                </value>
                <value>
                    <fullName>Planejamento semana 3</fullName>
                </value>
                <value>
                    <fullName>Planejamento semana 4 (até o fim do mês)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_do_Planejamento__c</fullName>
        <label>Status do Planejamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Encerrado</fullName>
                </value>
                <value>
                    <fullName>Não Iniciado</fullName>
                    <default>true</default>
                    <label>Não Iniciado</label>
                </value>
                <value>
                    <fullName>Rejeitado (Aprovação Mensal)</fullName>
                </value>
                <value>
                    <fullName>Aguardando Aprovação</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Modification proposed</fullName>
                </value>
                <value>
                    <fullName>Ok para solicitar Aprovação</fullName>
                </value>
                <value>
                    <fullName>Visitas nao agendadas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Planejamento de Visita</label>
    <listViews>
        <fullName>AR_Plan_de_Visitas</fullName>
        <columns>NAME</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Conta_Encerrado__c</columns>
        <columns>Conta_Planejado__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Planejamento__c.PLV_Standard_AR</value>
        </filters>
        <label>AR Plan de Visitas</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>ARG_Gerente_General</role>
            <role>AR_Asistente_Cadenas</role>
            <role>AR_Asistente_KAM_Mayoristas</role>
            <role>AR_Creditos_y_Cobranzas</role>
            <role>AR_Director_Comercial</role>
            <role>AR_Director_de_Administraci_n_y_Finanzas</role>
            <role>AR_Director_de_Operaciones</role>
            <role>AR_Director_de_Ventas_Canal_Directo</role>
            <role>AR_Ejecutivo_de_Cuentas_Distribuidores</role>
            <role>AR_Ejecutivo_de_Cuentas_On_Trade</role>
            <role>AR_Gerente_Trade_Marketing</role>
            <role>AR_Gerente_de_Administracion_y_Finanzas</role>
            <role>AR_Gerente_de_Ventas_SPM_e_Interior</role>
            <role>AR_Inteligencia_Comercial</role>
            <role>AR_Jefe_Regional_Centro_y_NOA</role>
            <role>AR_Jefe_Regional_Litoral</role>
            <role>AR_Jefe_Regional_Sur</role>
            <role>AR_Jefe_de_Distribuidores</role>
            <role>AR_Jefe_de_Finanzas</role>
            <role>AR_Jefe_de_Ventas_On_Trade</role>
            <role>AR_KAM_Mayoristas</role>
            <role>AR_KAM_Supermercados</role>
            <role>AR_KAM_Supermercados_JW</role>
            <role>AR_KAM_Supermercados_Jr</role>
            <role>AR_Logistica</role>
            <role>AR_Representante_Centro_NOA</role>
            <role>AR_Representante_Litoral</role>
            <role>AR_Representante_Sur</role>
            <role>AR_Supply_Chain_Manager</role>
            <role>AR_Tesoreria</role>
            <role>AR_Vendedor_Centro_NOA</role>
            <role>AR_Vendedor_Litoral</role>
            <role>AR_Vendedor_Sur</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>MX_Plan_de_Visitas</fullName>
        <columns>NAME</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Conta_Planejado__c</columns>
        <columns>Conta_Encerrado__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Planejamento__c.LAT_MX_PLV_Approved,Planejamento__c.LAT_MX_PLV_NewPlanning</value>
        </filters>
        <filters>
            <field>Ano_de_Referencia__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>MX-  Plan de Visitas</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>MX_Abogado</role>
            <role>MX_Analista_Administracion_y_Reporte</role>
            <role>MX_Analista_Autoservicios</role>
            <role>MX_Analista_Mayoreo</role>
            <role>MX_Analista_de_Contabilidad</role>
            <role>MX_Coordinador_Autoservicios</role>
            <role>MX_Coordinador_Centro</role>
            <role>MX_Coordinador_Estrategia_Canal_Conveniencia</role>
            <role>MX_Coordinador_Estrategia_On_Premise</role>
            <role>MX_Coordinador_Estrategia_Trade_Canal_Moderno</role>
            <role>MX_Coordinador_Estrategia_Trade_Mayoreo</role>
            <role>MX_Coordinador_Norte</role>
            <role>MX_Coordinador_Occidente</role>
            <role>MX_Coordinador_Sur</role>
            <role>MX_Coordinador_de_Mayoreo</role>
            <role>MX_Coordinador_de_Prospeccion</role>
            <role>MX_Coordinador_de_condiciones_comerciales</role>
            <role>MX_Coordinador_de_planeacion_ventas</role>
            <role>MX_Coordinador_de_ventas_Autoservicios</role>
            <role>MX_Coordinador_de_ventas_de_Conveniencia</role>
            <role>MX_Director_Canal_RTDs</role>
            <role>MX_Director_Region_Centro_Occidente_Mayoreo</role>
            <role>MX_Director_Region_Norte_Pacifico_Mayoreo</role>
            <role>MX_Director_Region_Sur_Mayoreo</role>
            <role>MX_Director_de_Administracion_Comercial_y_Estrategia</role>
            <role>MX_Director_de_Canal_Autoservicios</role>
            <role>MX_Director_de_Canal_Conveniencia</role>
            <role>MX_Director_de_Credito_y_Cobranzas</role>
            <role>MX_Director_de_Juridico</role>
            <role>MX_Director_de_On_Premise</role>
            <role>MX_Director_de_Servicios_Financieros</role>
            <role>MX_Director_de_Supply_Chain</role>
            <role>MX_Director_de_Trade_Marketing</role>
            <role>MX_Director_de_inteligencia_de_mercados</role>
            <role>MX_Ejecutivo_On_Trade_Bajio_Occidente</role>
            <role>MX_Ejecutivo_On_Trade_Norte</role>
            <role>MX_Ejecutivo_On_Trade_Sur</role>
            <role>MX_Ejecutivo_On_Trade_Sureste</role>
            <role>MX_Ejecutivo_de_Administracion_de_Ventas</role>
            <role>MX_Ejecutivos_On_Trade_Valle_de_Mexico</role>
            <role>MX_Gerente_Nacional_de_Trade_Marketing_Operaciones</role>
            <role>MX_Gerente_Regional_Bajio_Occidente</role>
            <role>MX_Gerente_Regional_Norte</role>
            <role>MX_Gerente_Regional_Trade_Marketing_Operativo_Centro</role>
            <role>MX_Gerente_Regional_Trade_Marketing_Operativo_Norte</role>
            <role>MX_Gerente_Regional_Trade_Marketing_Operativo_Occidente</role>
            <role>MX_Gerente_Regional_Trade_Marketing_Operativo_Sur</role>
            <role>MX_Gerente_Sur</role>
            <role>MX_Gerente_Sureste</role>
            <role>MX_Gerente_Valle_de_Mexico</role>
            <role>MX_Gerente_de_Academy</role>
            <role>MX_Gerente_de_Administracion_de_Ventas</role>
            <role>MX_Gerente_de_Contabilidad</role>
            <role>MX_Gerente_de_Cuentas_claves_Conveniencia</role>
            <role>MX_Gerente_de_Distribucion</role>
            <role>MX_Gerente_de_Estrategia</role>
            <role>MX_Gerente_de_Estrategia_Trade_Canal_Moderno</role>
            <role>MX_Gerente_de_Estrategia_Trade_Conveniencia</role>
            <role>MX_Gerente_de_Estrategia_Trade_Mayoreo</role>
            <role>MX_Gerente_de_Trade_Marketing_RTDs</role>
            <role>MX_Gerente_de_control_comercial</role>
            <role>MX_Gerente_de_cuentas_clave_DHs</role>
            <role>MX_Gerente_de_cuentas_clave_mayoreo_Centro_Occidente</role>
            <role>MX_Gerente_de_cuentas_clave_mayoreo_Norte_Pacifico</role>
            <role>MX_Gerente_de_cuentas_clave_mayoreo_Sur</role>
            <role>MX_Gerente_de_cuentas_claves_Autoservicios</role>
            <role>MX_Gerente_de_planeacion_comercial</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_Plan_de_Visitas_Mercedes</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>Conta_Planejado__c</columns>
        <columns>Conta_Encerrado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ADURAN01,JMENDO01,IVILLE01,GAMADO03,AGONZALE,CESCOB02</value>
        </filters>
        <label>MX-  Plan de Visitas Mercedes</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Meus_Planejamentos</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>Aprovado_semana_1__c</columns>
        <columns>aprovado_semana_4__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>CRM</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>PRLATAM</value>
        </filters>
        <label>Meus Planejamentos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Meus_Planejamentos_deste_M_s</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>Aprovado_semana_1__c</columns>
        <columns>Aprovado_semana_2__c</columns>
        <columns>Aprovado_semana_3__c</columns>
        <columns>aprovado_semana_4__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Meus Planejamentos deste Mês</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Todos_Planejamentos_deste_M_s</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>Aprovado_semana_1__c</columns>
        <columns>Aprovado_semana_2__c</columns>
        <columns>Aprovado_semana_3__c</columns>
        <columns>aprovado_semana_4__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>M_s_de_Ref_rencia__c</field>
            <operation>equals</operation>
            <value>Agosto</value>
        </filters>
        <filters>
            <field>Ano_de_Referencia__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>Todos Planejamentos deste Mês</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UY_Plan_de_Visitas</fullName>
        <columns>NAME</columns>
        <columns>Ano_de_Referencia__c</columns>
        <columns>M_s_de_Ref_rencia__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Conta_Encerrado__c</columns>
        <columns>Conta_Planejado__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Planejamento__c.PLV_Standard_UY</value>
        </filters>
        <label>UY Plan de Visitas</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>ARG_Gerente_General</role>
            <role>UY_Administraci_n_de_Ventas</role>
            <role>UY_Asistente_de_Administracion_y_Finanzas</role>
            <role>UY_Asistente_de_Logistica_y_Facturaci_n</role>
            <role>UY_Ejecutivo_On_Premise</role>
            <role>UY_Gerente_de_Administracion_y_Finanzas</role>
            <role>UY_Gerente_de_Logistica</role>
            <role>UY_Gerente_de_Ventas</role>
            <role>UY_Gerente_de_Ventas_y_Trade_Marketing</role>
            <role>UY_Jefe_Ventas_Interior</role>
            <role>UY_KAM_Border</role>
            <role>UY_KAM_Montevideo</role>
            <role>UY_KAM_Supermercados</role>
            <role>UY_Promotor_de_Ventas_Interior</role>
            <role>UY_Promotor_de_Ventas_Montevideo</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nome do Planejamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planejamentos de Visitas</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_PLV_Approved</fullName>
        <active>true</active>
        <label>MX Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_PLV_NewPlanning</fullName>
        <active>true</active>
        <label>MX New Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>PLV_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>PLV_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LAT_BR_PLV_VR01_CantChangeDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW())
&amp;&amp;
(ISCHANGED(M_s_de_Ref_rencia__c) ||  ISCHANGED(Ano_de_Referencia__c ))</errorConditionFormula>
        <errorMessage>Year and Month fields cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_BR_PLV_VR01_CantChangeName</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name != &apos;Administrador do sistema&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_SystemAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;Business administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BusinessAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BR_Business_Administrator&apos;
&amp;&amp;
$Profile.Name != &apos;LAT_BusinessAdministrator&apos;
&amp;&amp;
$Profile.Name != &apos;PR BRAZIL System Administrator&apos;
&amp;&amp;
NOT(ISNEW())
&amp;&amp;
ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name field cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_MX_PLV_VR01_MonthYearValidation</fullName>
        <active>true</active>
        <description>Validates that the month and year selected are for the current month and year or after.</description>
        <errorConditionFormula>$RecordType.DeveloperName=&apos;LAT_MX_PLV_NewPlanning&apos;
&amp;&amp;
(ISNEW() &amp;&amp;
(
IF(YEAR(LAT_MonthYear__c) &lt; YEAR(TODAY()), TRUE, 
IF(YEAR(LAT_MonthYear__c) = YEAR(TODAY()) &amp;&amp; MONTH(LAT_MonthYear__c) &lt; MONTH(TODAY()), TRUE, FALSE)) 
)
)</errorConditionFormula>
        <errorMessage>You cannot create a Planejamento for previous months.</errorMessage>
    </validationRules>
</CustomObject>